# invisible-crawler

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  AGENT_TASK_DOMAIN_TRACKING.md  DEPLOYMENT.md  DOMAIN_TRACKING_DESIGN.md  Dockerfile  IMPLEMENTATION.md  PHASE_C_HARDENING.md  README.md  SYSTEM_DESIGN.md  alembic.ini  analyze_results.py  check_hashes.py  clean_db.py  crawl_summary_2026-02-05.md  crawl_summary_2026-02-06.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env_config.py  load_seeds_to_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg  setup-host-databases.sh
config/: last1000_seeds.txt  last1000_seeds_prev100.txt  last1000_seeds_prev200.txt  seed_allowlist.txt  seed_blocklist.txt  test_seeds.txt  top100_seeds.txt  tranco_top1m_pl.txt
crawler/: __init__.py  cli.py  dupefilter.py  logging_config.py  pipelines.py  redis_keys.py  scheduler.py  settings.py
docker/: entrypoint.sh
processor/: __init__.py  async_fetcher.py  domain_canonicalization.py  fetcher.py  fingerprint.py  media_policy.py
scripts/: phase_c_hardening_validation_template.md  phase_c_validation.sql
storage/: __init__.py  db.py  domain_repository.py  frontier_checkpoint.py  priority_calculator.py  schema.sql
tests/: __init__.py  conftest.py  fixtures.py  test_async_fetcher.py  test_cli.py  test_concurrency.py  test_domain_canonicalization.py  test_domain_claim.py  test_domain_repository.py  test_domain_tracking_integration.py  test_frontier_checkpoint.py  test_gap_fixes.py  test_integration.py  (+10 more)
(+12 files in other folders)
